2015-10-06 Martin Grønholdt

* handlers/fs/http-fs.c (http_fs_open_file): Fixed a zero termination bug. This closes BUG #1.
* fs/fs.c (fs_open): Added memory allocation check.
* Toolchain ESP8266 SDK now version 1.4.
* tools/missing_dec.h: Corrected for SDK 1.4 changes for their leak detection stuff.


2015-10-01 Martin Grønholdt

* tools/dbffs-tools/README.me: Added file.
* tools/dbffs-tools/src/*: Removed directory support.
						   Writes absolute links.
						   Added verbose command line option.						   
						   DBFFS at version 0.1.0.
						   dbffs-iamge at version 0.2.0.


2015-09-21 Martin Grønholdt

* tools/dbffs-tools/dbffs-link.c (create_link_entry): Set target_len.


2015-09-19 Martin Grønholdt

* tools/dbffs-tools/dbffs-dir.c (write_dir_entry): Fixed a byte order bug.
												 : Write offset of the last entry correctly.
												 : Write directory and entries in the right order.
* tools/dbffs-tools/dbffs-file.c (write_file_entry): Fixed a byte order bug.
												   : Write offset of the last entry correctly.
* tools/dbffs-tools/dbffs-link.c (write_link_entry): Fixed a byte order bug.
												   : Write offset of the last entry correctly.
												   : Write target name and length.
* tool/dbffs-tools/dbffs-gen.c (create_entry): Write directory and entries in the right order.
							   (count_dir_entries): Added function.
* tool/dbffs-tools/dbffs-gen.h (count_dir_entries): Added function.								


2015-09-18 Martin Grønholdt

* fs/fs.c: Ported to DBBFS.
* fs/dbffs.*: Added files.
* Makefile: Rewrote rules for FS to use DBFFS.
* tools/dbffs-tools: Added file system creation tool.


2015-09-11 Martin Grønholdt

* slighttp/http-mime.*: Added GZIP mime type.


2015-09-10 Martin Grønholdt

* net/tcp.c: (tcp_print_connection_status): More error checking.
			 (tcp_send): Print error status as text as well.
* fs/connect/hostname.html: New file.
* fs/connect/passwd.html: Updated menu and fixes.
* fs/connect/nets.html: Updated menu and fixes.